--- a/app/views/layouts/music.html.erb
+++ b/app/views/layouts/music.html.erb
@@ -16,11 +16,11 @@
           </div>
            <div id="inner_container">
 	        	<%= render(:partial => "shared/home/tabs") %>
-            <%= @content_for_layout %>
-            
+            <%= yield %>
 
 
-            
+
+
 				<div id="footer">
 					<div id="footer-links">
 						<div class="title-hr-2gridleft">
@@ -43,32 +43,32 @@
 						<h2>Subscribe to our newsletter</h2>
 						<hr/>
 						</div>
-						
+
 <form accept-charset="UTF-8" action="/home/subscribe" method="post">
 							<div id="newshold">
-								
+
 <!-- %= email_field_tag("email", value = "subscribe", options = {:controller => "home", :action => "subscribe"}) % -->
 <input type="text" id="newsinput" placeholder="enter your email address" name="email"><input type="submit" id="newssub" value="subscribe" >
 							</div>
-						
-</form>						
-						
+
+</form>
+
 					</div>
 
 				</div>
 				</div>
-				
-				
+
+
 
 				<div id="legal-notice">
 				<p class="copyright"><i>for/wind.net </i>&#169; <i><script type="text/javascript">document.write((new Date()).getFullYear());</script></i></p>
 				</div>
-					
-					
-			
+
+
+
 			</div>
-                       
-                        
+
+
       <script src='http://www.google-analytics.com/ga.js' type='text/javascript'></script>
   		<script type="text/javascript">
         try{
