--- a/app/views/layouts/pieces.html.erb
+++ b/app/views/layouts/pieces.html.erb
@@ -23,7 +23,7 @@
            <div id="inner_container">
 
 	        	<%= render(:partial => "shared/home/tabs") %>
-            <%= @content_for_layout %>
+            <%= yield %>
 		 			</div>
   		</div>
 		</div>
