--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
 <img src= <%="/images/releases/"+ release.cat.downcase + "_sm.jpg" %>></img>
 <div class="cover boxcaption">
 <h2><a href=<%= "/releases/" + release.cat %> title="..."><%= release.cat %>:<%= release.title %></a></h2>
-<p><%= release.short_desc %></p>
+<p><%= release.short_desc.html_safe %></p>
 </div>
 </div>
 <% end %>
