--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <div id="home_promo_header">
 
-<a href="http://www.normanrecords.com/poogle/index.php?q=forwind"><img src="/images/index/cd-promo2.jpg"></a>
+<a href="/releases/fwd09"><img src="/images/index/tomo-artist-banner-with-text.png"></a>
 
 <p></p>
 </div>
