--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -52,7 +52,7 @@
 
 <form accept-charset="UTF-8" action="/home/subscribe" method="post">
 							<div id="newshold">
-<input type="text" id="newsinput" placeholder="enter your email address" name="email"><input type="submit" id="newssub" value="subscribe" >
+<input type="text" id="newsinput" placeholder="enter your email address" name="email"/><input type="submit" id="newssub" value="subscribe" />
 							</div>
 </form>
 
