--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -6,7 +6,7 @@
 		<div class="p_contentSpacer">
 		</div>
 		<p>
-		<%= @artist.description %>
+		<%= @artist.description.html_safe %>
 		</p>
 </div>
 
