--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,11 +2,12 @@
 
 <div id="container_2grid_left">
 <p>
-Forwind (pronounced forwYnd) is a small and independent label based in London.
+Forwind (pronounced forwYnd) is a multi-genre label currently operating from London and Manchester.
 <br/><br/>
-We’re not interested in music from any particular genre; our catalogue includes free improvisation, electronica, electro-acoustic improv and even songs.
+We're not worried about fitting neatly into one section in the record shop. Our passion is for adventurous music with a serious attention to detail, from the performance to the production. 
 <br/><br/>
-Our aim is to provide a platform for music that maximises the expressive potential of sound, instruments and voices either through physical or electronic means, whether composed, constructed or improvised.</p>
+Our aim is to provide a platform for music that maximises the expressive potential of sound, instruments and voices either through physical or electronic means, whether composed, constructed or improvised.
+</p>
 <div class="content_footerSpacer">
 </div>
 </div>
