just use the old banner until we have audio up

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <div id="home_promo_header">
 
-<a href="/releases/fwd10"><img src="/images/index/fwd10-seriously-2.jpg"></a>
+<a href="/releases/fwd09"><img src="/images/index/tomo-artist-banner-with-text.png"></a>
 
 <p></p>
 </div>
