--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -2,9 +2,9 @@
  
 <% @releases.each do |release| %>
 <div class="release_index_promo">
-<a href=<%= "/releases/#{release.id}" %>>
+<a href=<%="/releases/"+release.cat.downcase %>>
 <img src= <%="/images/releases/"+ release.cat.downcase + "_sm.jpg" %>></img></a>
-<h2><%= link_to release.title.html_safe, release %></h2>
+<h2><a href=<%="/releases/"+release.cat.downcase %>> <%= release.title.html_safe%></a></h2>
 <p><%= release.short_desc.html_safe %></p>
 </div>
 <% end %>
