slug added to artist, rewrites in place, no links should resolve to artist id

--- a/app/views/artists/index.erb
+++ b/app/views/artists/index.erb
@@ -2,7 +2,7 @@
 
 <% @artists.each do |artist| %>
 <div class="artist_index_promo">
-<a href=<%= "/artists/#{artist.id}" %>><img src="<%="/images/artists/#{small_artists_image(artist.image)}" %>"/></a>
+<a href=<%= "/artists/#{artist.slug}" %>><img src="<%="/images/artists/#{small_artists_image(artist.image)}" %>"/></a>
 <span><%= link_to artist.name, artist %></span>
 </div>
 <% end %>
