--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -3,7 +3,7 @@
 <img src=<%= "/images/releases/" + @release.cat.downcase + ".png" %>>
 
 <ol>
-<li><dl><dt><span>ARTIST :</span> <%= link_to @release.artist.name.upcase, @release.artist %></dt></dl></li>
+<li><dl><dt><span>ARTIST :</span> <a href=<%= "/artists/" + @release.artist.slug %>><%= @release.artist.name.upcase%></a></dt></dl></li>
 <li><dl><dt><span>ALBUM :</span><%= @release.title.upcase %></dt></dl></li>
 <li><dl><dt><span>RELEASE DATE :</span> <%= @release.release_date.strftime("%Y/%m/%d")%></dt></dl></li>
 <li><dl><dt><span>LABEL :</span> FORWIND</dt></dl></li>
