--- a/app/views/artists/index.erb
+++ b/app/views/artists/index.erb
@@ -2,8 +2,8 @@
 
 <% @artists.each do |artist| %>
 <div class="artist_index_promo">
-<a href=<%= "/artists/#{artist.slug}" %>><img src="<%="/images/artists/#{small_artists_image(artist.image)}" %>"/></a>
-<span><%= link_to artist.name, artist %></span>
+<a href="<%= "/artists/#{artist.slug}" %>"><img src="<%="/images/artists/#{small_artists_image(artist.image)}" %>"/></a>
+<span><a href="<%= "/artists/#{artist.slug}" %>"><%= artist.name %></a></span>
 </div>
 <% end %>
 </div>
