--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -2,12 +2,16 @@
 <head>
   <title>Forwind | <%= @context.downcase%></title>
 	<%= javascript_include_tag "application", "email" %>
-  <%= stylesheet_link_tag('forwind') %>
+  	<%= stylesheet_link_tag('forwind') %>
+    <%= stylesheet_link_tag('sharre') %>
 <meta name="google-site-verification" content="Oq2AaagB6c_NXK25RChwoHq0tn7yRod2WRabKCgsYD8" />
-<meta name="description" content="Forwind is a publishing label providing a platform for a wide range of genres from live improvisation to precise studio completed treatments, constructions and compositions. Home to Sonnamble, Fourth Page, Elvers, Clang Sayne, CjC, James O'Sullivan. Regular Podacsts and news from the improv electro acoustic scene." />
+<title>FORWIND &bull; An independent publishing label </title>
+<meta name="description" content="An independent music publishing label born 2009. " />
+<meta name="keywords" content="Forwind, Jeff Carey, Clang Sayne, James O'Sullivan, CjC, Atom eye, Sonnamble, Fourth Page, Tomonari Nozaki, independent record label, London, electronic music"  />
 
 <link rel="icon" href="/images/index/favicon.ico" type="image/x-icon" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.7.min.js"></script>
+<script src="/javascripts/jquery.sharrre-1.3.4.min.js"></script>
 <script src="/javascripts/boxgrid.js"></script>
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -30,18 +34,23 @@
 	           	<%= render(:partial => "shared/home/tabs") %>
              	<%= yield %>
 				<div id="footer">
-					<div id="footer-links">
+							<div id="footer-links">
 						<div class="title-hr-2gridleft">
 						<hr/>
-						<h2>Links</h2>
+						<h2>LINKS</h2>
+							
 						<hr/>
 						</div>
-						<ul class="footerLinks">
-							<li><a href="http://soundcloud.com/forwind" title="Visit our SoundCloud page">SoundCloud</a></li>
-							<li><a href="http://twitter.com/#!/forwindings" title="View our tweets">Twitter</a></li>
-							<li><a href="http://www.facebook.com/pages/Forwind/143631062329300" title="Visit our Facebook page">Facebook</a></li>
-							<li><a href="http://www.mixcloud.com/Forwind/" title="Visit our MixCloud page">MixCloud</a></li>
-						<ul>
+						<div id="socialLinks">
+							<ul>
+							<li><a href="http://www.last.fm/label/Forwind" title="Visit our Last FM page" target="_blank"><img src='/images/index/lastfm-24x24.png'></a></li>
+							<li><a href="http://soundcloud.com/forwind" title="Visit our SoundCloud page" target="_blank"><img src='/images/index/soundcloud-24x24.png'></a></li>
+							<li><a href="http://twitter.com/#!/forwindings" title="View our tweets" target="_blank"><img src='/images/index/twitter-24x24.png'></a></li>
+							<li><a href="http://www.facebook.com/pages/Forwind/143631062329300" title="Visit our Facebook page" target="_blank"><img src='/images/index/facebook-24x24.png'></a></li>
+							<li><a href="http://www.vimeo.com/forwind" title="Visit our Vimeo page" target="_blank"><img src='/images/index/vimeo-24x24.png'></a></li>
+							<li><a href="http://www.mixcloud.com/Forwind/" title="Visit our Vimeo page" target="_blank"><img src="/images/index/mixcloud.png" alt="Mixcloud" /></a></li>
+						<ul>	
+						</div>					
 					</div>
 					<div id="footer-subscribe">
 						<div class="title-hr-1gridright">
