--- a/app/views/layouts/music.html.erb
+++ b/app/views/layouts/music.html.erb
@@ -4,41 +4,62 @@
 <head>
   <title>Forwind | <%= @context.downcase%></title>
   <%= stylesheet_link_tag('forwind') %>
+  <%= stylesheet_link_tag('sharre') %>
 <%= auto_discovery_link_tag(:atom, "/feeds.atom") %>
+ <script src="http://code.jquery.com/jquery-1.7.min.js"></script>
+<script src="/javascripts/jquery.sharrre-1.3.4.min.js"></script>
+<%= javascript_include_tag "jquery.sharrre-1.3.4.min" %>
 <link rel="icon" href="/images/index/favicon.ico" type="image/x-icon" />
+<meta property="og:image" content=<%= @thing.facebookIcon %>/>
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 	</head>
     <body>
+
+	
       <div id="outer_container">
           <div id="crumb_trail">
           </div>
            <div id="inner_container">
 	        	<%= render(:partial => "shared/home/tabs") %>
-            <%= yield %>
-
-
-
-
+            	<%= yield %>
 				<div id="footer">
 					<div id="footer-links">
 						<div class="title-hr-2gridleft">
 						<hr/>
-						<h2>Links</h2>
+							<div id="example2">
+							<div id="shareme" data-url=<%= request.url %> data-text="Forwind.net | Releases">
+							</div>						
+						       <script>
+						            $('#shareme').sharrre({
+						              share: {
+						                twitter: true,
+						                facebook: true,
+						                googlePlus: true
+						              },
+						              template: '<div class="box"><div class="left">SHARE</div><div class="middle"><a href="#" class="facebook">F</a><a href="#" class="twitter">T</a><a href="#" class="googleplus">+1</a></div></div>',
+						              enableHover: false,
+						              enableTracking: true,
+						              render: function(api, options){
+						                $(api.element).on('click', '.twitter', function() {
+						                  api.openPopup('twitter');
+						                });
+						                $(api.element).on('click', '.facebook', function() {
+						                  api.openPopup('facebook');
+						                });
+						                $(api.element).on('click', '.googleplus', function() {
+						                  api.openPopup('googlePlus');
+						                });
+						              }
+						            });
+						        </script>
+							</div>
 						<hr/>
 						</div>
-						<ul class="footerLinks">
-							<li><a href="http://soundcloud.com/forwind" title="Visit our Sound Cloud page">Sound Cloud</a></li>
-							<li><a href="http://twitter.com/#!/forwindings" title="View our tweets">Twitter</a></li>
-							<li><a href="http://www.facebook.com/pages/Forwind/143631062329300" title="Visit our Facebook page">Facebook</a></li>
-							 <li><a href="http://www.mixcloud.com/Forwind/" title="Visit our MixCloud page">MixCloud</a></li>
-
-
-						<ul>
 					</div>
 					<div id="footer-subscribe">
-						<div class="title-hr">
+						<div class="title-hr-1gridright">
 						<hr/>
 						<h2>Subscribe to our newsletter</h2>
 						<hr/>
@@ -46,15 +67,13 @@
 
 <form accept-charset="UTF-8" action="/home/subscribe" method="post">
 							<div id="newshold">
-
-<!-- %= email_field_tag("email", value = "subscribe", options = {:controller => "home", :action => "subscribe"}) % -->
-<input type="text" id="newsinput" placeholder="enter your email address" name="email"><input type="submit" id="newssub" value="subscribe" >
+<input type="text" id="newsinput" placeholder="enter your email address" name="email"/><input type="submit" id="newssub" value="subscribe" />
 							</div>
-
 </form>
 
 					</div>
 
+				</div>
 				</div>
 				</div>
 
