--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <div id="home_promo_header">
 
-<a href="/releases/fwd10"><img src="/images/index/fwd10-promo.jpg"></a>
+<a href="/releases/fwd11"><img src="/images/index/atomEye3.jpg"></a>
 
 <p></p>
 </div>
