--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -35,37 +35,30 @@
              	<%= yield %>
 				<div id="footer">
 							<div id="footer-links">
-						<div class="title-hr-2gridleft">
 						<hr/>
 						<h2>LINKS</h2>
-							
 						<hr/>
-						</div>
 						<div id="socialLinks">
 							<ul>
 							<li><a href="http://soundcloud.com/forwind" title="Visit our SoundCloud page" target="_blank"><img src='/images/index/soundcloud-24x24.png'></a></li>
 							<li><a href="http://twitter.com/#!/forwindings" title="View our tweets" target="_blank"><img src='/images/index/twitter-24x24.png'></a></li>
 							<li><a href="http://www.facebook.com/pages/Forwind/143631062329300" title="Visit our Facebook page" target="_blank"><img src='/images/index/facebook-24x24.png'></a></li>
-							<li><a href="http://www.vimeo.com/forwind" title="Visit our Vimeo page" target="_blank"><img src='/images/index/vimeo-24x24.png'></a></li>
 							<li><a href="http://www.mixcloud.com/Forwind/" title="Visit our Vimeo page" target="_blank"><img src="/images/index/mixcloud.png" alt="Mixcloud" /></a></li>
-							<li><a href="http://www.last.fm/label/Forwind" title="Visit our Last FM page" target="_blank"><img src='/images/index/lastfm-24x24.png'></a></li>
-						<ul>	
-						</div>					
+						<ul>
+						</div>
 					</div>
-					<div id="footer-subscribe">
+					<!--div id="footer-subscribe">
 						<div class="title-hr-1gridright">
 						<hr/>
 						<h2>Subscribe to our newsletter</h2>
 						<hr/>
 						</div>
-
 <form accept-charset="UTF-8" action="/home/subscribe" method="post">
 							<div id="newshold">
 <input type="text" id="newsinput" placeholder="enter your email address" name="email"/><input type="submit" id="newssub" value="subscribe" />
 							</div>
 </form>
-
-					</div>
+					</div-->
 
 				</div>
 				</div>
