--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -49,6 +49,7 @@
   Availability links to follow shortly.
 <% else %>
   <% unless @release.physicals.empty? %>
+    <br/>
     <%= @release.preferred_format %> available from 
     <% @release.physicals.each do |link| %>
        <a href=<%= link.location %>><%= link.vendor %></a>
@@ -61,6 +62,7 @@
   <br/>
   <% end %>
   <% unless @release.downloads.empty? %>
+    <br/>
     Flac and Mp3 available from 
     <% @release.downloads.each do |link| %>
       <a href=<%= link.location %>><%= link.vendor %></a>
@@ -75,8 +77,9 @@
   <br/>
 
   <% unless @release.streams.empty? %>
+  <br/>
     <% @release.streams.each do |link| %>
-      Stream from <%= link_to link.vendor, link.location %> 
+      Stream sampler from <%= link_to link.vendor, link.location %> 
     <% end %>
   <% end %>
 
