--- a/app/assets/stylesheets/forwind.css
+++ b/app/assets/stylesheets/forwind.css
@@ -550,7 +550,7 @@ clear:left;
 #footer {
   clear:both;
   height:210px;
-  margin: 0px 0 0 0;
+  margin: 0 0 0 0;
   padding: 30px 22px 20px 20px;
 }
 
@@ -565,15 +565,16 @@ clear:left;
 
 #footer-links {
   width: 750px;
-  height: 210px;
+  height: 30px;
   float: left;
 }
 
 #socialLinks ul{
-  padding-top: 19px;
   padding-right: 50px;
+  padding-top: 1px;
+  margin : 0;
   width: 535px;
-  height:210px;
+  height:22px;
   list-style: None;
 }
 
@@ -611,7 +612,7 @@ padding: 0 0 0px 0px;
 
 .footerLinks {
   width: 242px;
-    height: 210px;
+  height: 210px;
   margin:12px 16px 4px 0px;
   padding: 0px;
     float:left;
