--- a/app/views/podcasts/index.erb
+++ b/app/views/podcasts/index.erb
@@ -2,7 +2,7 @@
 
 <% @podcasts.each do |podcast| %>
 <div id="podcast_index_promo">
-<a href=<%= "/podcasts/#{podcast.id}" %>><img src="<%="/images#{podcast.file_name}_sm.jpg" %>"/></a>
+<a href=<%= "/podcasts/#{podcast.id}" %>><img src=<%= File.join(@s3_images, podcast.file_name + "_sm.jpg")%>></a>
 <span><%= link_to podcast.title, {:controller => "podcasts", :id => podcast.id, :action => "show"} %></span>
 <p>
 Compiled by <%= podcast.artist.name %>. 
