--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,9 +2,9 @@
 
 <div id="container_2grid_left">
 <p>
-Forwind (pronounced forwYnd) is a multi-genre label currently operating from London and Manchester.
+Forwind (pronounced forwYnd) is a multi-genre label currently operating from Berlin, Manchester and London.
 <br/><br/>
-We're not worried about fitting neatly into one section in the record shop. Our passion is for adventurous music with a serious attention to detail, from the performance to the production. 
+We're not worried about fitting neatly into one section in the record shop. Our passion is for adventurous music with a serious attention to detail, from the performance to the production.
 <br/><br/>
 Our aim is to provide a platform for music that maximises the expressive potential of sound, instruments and voices either through physical or electronic means, whether composed, constructed or improvised.
 <br/><br/>
