--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <div id="home_promo_header">
 
-<a href="/releases/fwd11"><img src="/images/index/atomEye3.jpg"></a>
+<a href="/releases/fwd11"><img src=<%= File.join(@s3_images, "index", "atomEye3.jpg")%>></a>
 
 <p></p>
 </div>
@@ -18,7 +18,7 @@
 <% @small_releases.each do |release| %>
 <% unless @small_releases.index(release) > 3 %>
 <div class="home-promo-boxgrid captionfull">
-<img src= <%="/images/releases/"+ release.cat.downcase + "_sm.jpg" %>></img>
+<img src= <%= File.join(@s3_images, "releases", release.cat.downcase + "_sm.jpg") %>></img>
 <div class="cover boxcaption">
 <h2><a href=<%= "/releases/" + release.cat %> title="..."><%= release.cat %>:<%= release.title %></a></h2>
 <p><%= release.short_desc.html_safe %></p>
@@ -40,7 +40,7 @@
 	</div>
 
 	<div class="home-podcast-boxgrid podcast-captionfull">
-    	<img src=<%="/images/podcasts/" + @podcast.cat_no + "_sm.jpg"%>></a>
+    	<img src=<%=File.join(@s3_images, "podcasts", @podcast.cat_no + "_sm.jpg")%>></a>
     	<div class="podcast-cover podcast-boxcaption">
         	<h2><a href=<%= "/podcasts/" + @podcast.id.to_s %> title=<%= @podcast.title %>><%= @podcast.title %></a></h2>
         	<p>Compiled & Mixed by <%= @podcast.artist.name %><br/>Genre: <%= @podcast.genre %></p>
