--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -1,6 +1,6 @@
 <div id="release_container">
 
-<img src=<%= "/images/releases/" + @release.cat.downcase + ".png" %>>
+<img src=<%= File.join(@s3_images, "releases", @release.cat.downcase + ".png")%>>
 
 <ol>
 <li><dl><dt><span>ARTIST :</span> <a href=<%= "/artists/" + @release.artist.slug %>><%= @release.artist.name.upcase%></a></dt></dl></li>
