--- a/app/views/shared/home/_tabs.html.erb
+++ b/app/views/shared/home/_tabs.html.erb
@@ -1,7 +1,7 @@
 <div id="tabs">
 
 <div id="logo">
-<a href="/"><img src="/images/index/forwind_logo.gif" alt="forwind"></a>
+<a href="/"><img src= <%= File.join(@s3_images, "index", "forwind_logo.gif") %> alt="forwind"></a>
 </div>
 
 <hr/>
