fix path to rss icon , now on s3

--- a/blogkit/app/views/blog_posts/index.html.erb
+++ b/blogkit/app/views/blog_posts/index.html.erb
@@ -14,7 +14,7 @@
 <% else %>
 
 	<div class='blogRightHandNav'>
-		<img src="/images/index/podcastRSS_icon_small.png"/>
+		<img src=<%=File.join(@s3_images, "index", "podcastRSS_icon_small.png")%>>
 		<a href="http://www.forwind.net/blog_posts.atom">ATOM FEED</a>
 	<%= blog_tags_list %>
 	</div>
