audio in place, banner updated

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <div id="home_promo_header">
 
-<a href="/releases/fwd11"><img src=<%= File.join(@s3_images, "index", "atomEye3.jpg")%>></a>
+<a href="/releases/fwd12"><img src=<%= File.join(@s3_images, "index", "forwind-new-release.jpg")%>></a>
 
 <p></p>
 </div>
