format blog poster correctly

--- a/blogkit/app/views/blog_posts/_blog_post.html.erb
+++ b/blogkit/app/views/blog_posts/_blog_post.html.erb
@@ -11,12 +11,14 @@
 	</h1>
 
 	<p class="blogPostPostedAt">
+		<span class="blogPoster">
 		Posted
 		<% if blog_post.show_user? %>
-			by <span class="blogPoster"><%= blog_post.user_name %></span>
+			by <%= blog_post.user_name.capitalize %>
 		<% end %>
-		on 
+		on
 		<span class="blogPostDate"><%= blog_post.formatted_updated_at %></span>
+		</span>
 	</p>
 
 	<div class="blogPostBody">
@@ -35,7 +37,7 @@
 			<ul class="blogList">
 				<% if params[:action] == 'show' %>
 					<li><%= link_to('Back', blog_posts_path) %></li>
-				<% end %>			
+				<% end %>
 					<li><%= link_to('Edit Post', edit_blog_post_path(blog_post))%></li>
 					<li><%= link_to('Delete', blog_post_path(blog_post), :method => :delete, :confirm => "Are you sure you want to destroy the post: #{blog_post.title}") %></li>
 			</ul>
