use published_at for blogpost date (not updated at)

--- a/blogkit/app/views/blog_posts/_blog_post.html.erb
+++ b/blogkit/app/views/blog_posts/_blog_post.html.erb
@@ -17,7 +17,7 @@
 			by <%= blog_post.user_name.capitalize %>
 		<% end %>
 		on
-		<span class="blogPostDate"><%= blog_post.formatted_updated_at %></span>
+		<span class="blogPostDate"><%= blog_post.formatted_published_at %></span>
 		</span>
 	</p>
 
